--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <h2> Lab assignments</h2>
     <ul> 
-        <li> <a href="Lab2_Martinez.html"></a></li>
-        <li> <a href=" lab1.html"></a></li>
+        <li> <a href="Lab2_Martinez.html">Lab 2 - Martinez</a></li>
+        <li> <a href="lab1.html">Lab 1</a></li>
     </ul>
 </body>
 </html>
