--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
     <h2> Lab assignments</h2>
     <ul> 
-        <li> <a href="Lab2_Martinez.html">Lab 2 - Martinez</a></li>
-        <li> <a href="lab1.html">Lab 1</a></li>
+        <li><a href="lab4/lab4.html"> </a></li>
+        <li><a href="Lab3/lab_3.html">Lab 3: loop mechanisms Martinez</a></li>
+        <li><a href="Lab2_Martinez.html">Lab 2: Conditional statement Martinez</a></li>
+        <li><a href="lab1.html">Lab 1: varaibles and String's methods- Martinez</a></li>
+    
     </ul>
 </body>
 </html>
