--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2> Lab assignments</h2>
     <ul> 
         <li><a href="lab4.html"> </a></li>
-        <li><a href="lab_3.html">Lab 3: loop mechanisms Martinez</a></li>
+        <li><a href="lab 3.html">Lab 3: loop mechanisms Martinez</a></li>
         <li><a href="Lab2_Martinez.html">Lab 2: Conditional statement Martinez</a></li>
         <li><a href="lab1.html">Lab 1: varaibles and String's methods- Martinez</a></li>
     
