--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="lab4.html">Lab 4: Functions </a></li>
         <li><a href="lab3.html">Lab 3: loop mechanisms Martinez</a></li>
         <li><a href="Lab2_Martinez.html">Lab 2: Conditional statement Martinez</a></li>
-        <li><a href="lab1.html">Lab 1: varaibles and String's methods- Martinez</a></li>
+        <li><a href="lab1.html">Lab 1: variables and String's methods- Martinez</a></li>
     
     </ul>
 </body>
