--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lab Assignments</title>
 </head>
 <body>
     <h1> Ian Martinez</h1>
 
     <h2> Lab assignments</h2>
-    <ul> 
-        <li><a href="lab4.html">Lab 4: Functions </a></li>
-        <li><a href="lab3.html">Lab 3: loop mechanisms Martinez</a></li>
-        <li><a href="Lab2_Martinez.html">Lab 2: Conditional statement Martinez</a></li>
-        <li><a href="lab1.html">Lab 1: variables and String's methods- Martinez</a></li>
-    
+    <ul><li><a href="lab4.html"> Lab 4: functions </a></li>
+        <li><a href="lab3.html">Lab 3: loops - Martinez</a></li>
+        <li><a href="Lab2_Martinez.html">Lab 2 - Martinez</a></li>
+        <li><a href="lab1.html">Lab 1 - Martinez</a></li>
     </ul>
 </body>
 </html>
+
