--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1> Ian Martinez</h1>
 
     <h2> Lab assignments</h2>
-    <ul><li><a href="lab4.html"> Lab 4: functions </a></li>
+    <ul>
+        <li> <a href= "HW 3.html"> Homework:3 Movie collection
+        <li> <a href="lab7.html"> Lab7: Acessing elements</a></li>
+        <li><a href="lab4.html"> Lab 4: functions </a></li>
         <li><a href="lab3.html">Lab 3: loops - Martinez</a></li>
         <li><a href="Lab2_Martinez.html">Lab 2 - Martinez</a></li>
         <li><a href="lab1.html">Lab 1 - Martinez</a></li>
