--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h2> Lab assignments</h2>
     <ul>
+        <li>  <a href = "lab9.html"> </li>
         <li> <a href= "HW 3.html"> Homework:3 Movie collection
         <li> <a href="lab7.html"> Lab7: Acessing elements</a></li>
         <li><a href="lab4.html"> Lab 4: functions </a></li>
