--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
     <ul>
         <li><a href="HW 3.html"> Homework 3: Movie collection</a></li>
-        <li><a href="Project1.HTML">Project 1</a><li>
+        <li><a href="file:///C:/Users/ianm5/OneDrive/Documents/Index%20Folder/Project1.HTML#math-section">Project 1</a><li>
         <li><a href="lab10.html"> Lab 10: Username and password entry</a></li>
         <li><a href="lab9.html"> Lab 9: Window and form events</a></li>
         <li><a href="lab8.html"> Lab 8:Events and applications</a></li>
