--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Ian Martinez</h1>
 
     <h2> Lab assignments</h2>
-        <li><a href="Project1.HTML">Project 1</a></li> 
+        <li><a href="Project1.html">Project 1</a></li> 
     <ul><li><a href="HW 3.html"> Homework 3: Movie collection</a></li>
         <li><a href="lab10.html"> Lab 10: Username and password entry</a></li>
         <li><a href="lab9.html"> Lab 9: Window and form events</a></li>
