--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h2> Lab assignments</h2>
         <li><a href="Project1.HTML">Project 1</a></li> 
     <ul><li><a href="HW 3.html"> Homework 3: Movie collection</a></li>
-        <li><a href="lab11.html"> React App</a>
+        <li><a href="Lab17/"</li>
+        <li><a href="lab12/props_react/">Lab 12 React Apps/<li>  
+        <li><a href="lab11/"> Lab11: Introduction to ReactJS</a><li>
         <li><a href="lab10.html"> Lab 10: Username and password entry</a></li>
         <li><a href="lab9.html"> Lab 9: Window and form events</a></li>
         <li><a href="lab8.html"> Lab 8:Events and applications</a></li>
